--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-media-recorder": "^1.4.0",
     "react-moveable": "^0.27.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
