--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,14 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "dompurify": "^2.2.7",
+    "draft-convert": "^2.1.10",
+    "draft-js": "^0.11.7",
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-media-recorder": "^1.4.0",
     "react-moveable": "^0.27.6",
     "react-router-dom": "^5.2.0",
@@ -48,6 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.2.1",
+    "@types/draft-convert": "^2.1.1",
+    "@types/draft-js": "^0.11.1",
+    "@types/react-draft-wysiwyg": "^1.13.2",
     "@types/react-router-dom": "^5.1.7"
   }
 }
