--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "axios": "^0.21.1",
     "dompurify": "^2.2.7",
     "draft-convert": "^2.1.10",
     "draft-js": "^0.11.7",
