--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-media-recorder": "^1.4.0",
     "react-moveable": "^0.27.6",
+    "react-pageflip": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
